# shower

./: .gitignore  API_SPEC.md  CMakeLists.txt  COMPILATION_GUIDE.md  DEVELOPER_GUIDE.md  FEATURE_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  PLAYLIST_IMPLEMENTATION_COMPLETE.md  PLAYLIST_README.md  QUICKSTART.md  README.md  SETUP.md  VideoTimeline  VideoTimeline.pro  build.sh  example_playlist.json  install_rpi.sh  main.cpp  mainwindow.cpp  mainwindow.h  mediaplayer.cpp  mediaplayer.h  networkclient.cpp  networkclient.h  run.sh  run_hwaccel.sh  timelinewidget.cpp  timelinewidget.h  videotimeline.service  videowidget.cpp  videowidget.h
.VSCodeCounter/2025-11-01_23-25-47/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
SFProDisplayFonts/: install_fedora.sh
data/: playlist.json  special_playlist.json
scripts/: build.sh  convert_remaining.sh  generate_special_playlist.sh  install_rpi.sh  reencode_av1_to_h264.sh  server-build.sh
server/: CMakeLists.txt  Makefile  README.md  build.ps1  build.sh  playlist_generator.py  run.sh  server  server.cpp  server.h  server.pro  server.py  server_backup.py  setup.py  simple_test.py  start_server.py  test_playlist.py  test_server.py
server/data/: current_media.json  playlist.json  schedule.json
server/moc/: moc_server.cpp
src/: CMakeLists.txt  Makefile  VideoTimeline.pro  activityoverlay.cpp  activityoverlay.h  diagnosticsoverlay.cpp  diagnosticsoverlay.h  icons.qrc  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  md3colors.h  mediacache.cpp  mediacache.h  mediaplayer.cpp  mediaplayer.h  networkclient.cpp  networkclient.h  qt6compat.h  specialevents.cpp  specialevents.h  statusbar.cpp  statusbar.h  timelinewidget.cpp  timelinewidget.cpp.save  timelinewidget.h  videowidget.cpp  videowidget.h
